--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <div id="root"></div>
+  <script src="https://kit.fontawesome.com/4b13537802.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
